fix: sidebar (#156)
* fix: horizontal scroll in sidebar

* feat: use grab cursor for sidebar items

* feat: remove image alt, added title

* chore: added comment

* chore: typo

--- a/src/components/AssetCard/VerticalCard/VerticalCard.css
+++ b/src/components/AssetCard/VerticalCard/VerticalCard.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   background: rgba(var(--purplish-grey-raw), 0.48);
   padding: 16px 10px;
-  cursor: pointer;
+  cursor: grab;
   height: 105px;
 }
 
