--- a/src/components/Drawer/Drawer.css
+++ b/src/components/Drawer/Drawer.css
@@ -1,5 +1,15 @@
 .Drawer {
-  width: 100%;
+  /* 
+  These 32px make up for the 16px of padding on both sides. 
+  If we used padding, then the width of the Drawer 
+  would be (100% - 16px - 16px - scrollbarWidth). We could compensate
+  the scrollbarWidth by having less padding-right, but the scrollbarWidth
+  changes among browsers and OS's and also it's 0 when the content is not 
+  scrollable. By using the rule below we make sure that the width of the
+  Drawer is constant, and the extra space to the right can me taken by
+  the scrollbar if needed, without breaking the layout.
+  */
+  width: calc(var(--sidebar-width) - 32px);
   user-select: none;
 }
 
